// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyInput Component matches snapshot (en-CA) 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c2 {
  background: #FFFFFF;
  border: 1px solid;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: #60666E;
}

.c2::-moz-placeholder {
  color: #60666E;
}

.c2:-ms-input-placeholder {
  color: #60666E;
}

.c2::placeholder {
  color: #60666E;
}

.c2:valid,
.c2[aria-invalid='false'] {
  border-color: #60666E;
}

.c2[aria-invalid='true'] {
  border-color: #CD2C23;
}

.c2:disabled,
.c2[aria-disabled='true'] {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
  color: #DBDEE1;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::-webkit-input-placeholder,
.c2[aria-disabled='true']::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::-moz-placeholder,
.c2[aria-disabled='true']::-moz-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled:-ms-input-placeholder,
.c2[aria-disabled='true']:-ms-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::placeholder,
.c2[aria-disabled='true']::placeholder {
  color: #B7BBC2;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 input {
  text-align: left;
  width: 132px;
}

<div
  class="c0 c1"
  data-testid="field-container"
>
  <input
    aria-disabled="false"
    aria-invalid="false"
    aria-required="false"
    class="c2"
    data-testid="input"
    id="uuid1"
    inputmode="numeric"
    placeholder="$"
    type="text"
    value="$100.00"
  />
</div>
`;

exports[`CurrencyInput Component matches snapshot (en-US) 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c2 {
  background: #FFFFFF;
  border: 1px solid;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: #60666E;
}

.c2::-moz-placeholder {
  color: #60666E;
}

.c2:-ms-input-placeholder {
  color: #60666E;
}

.c2::placeholder {
  color: #60666E;
}

.c2:valid,
.c2[aria-invalid='false'] {
  border-color: #60666E;
}

.c2[aria-invalid='true'] {
  border-color: #CD2C23;
}

.c2:disabled,
.c2[aria-disabled='true'] {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
  color: #DBDEE1;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::-webkit-input-placeholder,
.c2[aria-disabled='true']::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::-moz-placeholder,
.c2[aria-disabled='true']::-moz-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled:-ms-input-placeholder,
.c2[aria-disabled='true']:-ms-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::placeholder,
.c2[aria-disabled='true']::placeholder {
  color: #B7BBC2;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 input {
  text-align: left;
  width: 132px;
}

<div
  class="c0 c1"
  data-testid="field-container"
>
  <input
    aria-disabled="false"
    aria-invalid="false"
    aria-required="false"
    class="c2"
    data-testid="input"
    id="uuid1"
    inputmode="numeric"
    placeholder="$"
    type="text"
    value="$100.00"
  />
</div>
`;

exports[`CurrencyInput Component matches snapshot (fr-CA) 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c2 {
  background: #FFFFFF;
  border: 1px solid;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: #60666E;
}

.c2::-moz-placeholder {
  color: #60666E;
}

.c2:-ms-input-placeholder {
  color: #60666E;
}

.c2::placeholder {
  color: #60666E;
}

.c2:valid,
.c2[aria-invalid='false'] {
  border-color: #60666E;
}

.c2[aria-invalid='true'] {
  border-color: #CD2C23;
}

.c2:disabled,
.c2[aria-disabled='true'] {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
  color: #DBDEE1;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::-webkit-input-placeholder,
.c2[aria-disabled='true']::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::-moz-placeholder,
.c2[aria-disabled='true']::-moz-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled:-ms-input-placeholder,
.c2[aria-disabled='true']:-ms-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::placeholder,
.c2[aria-disabled='true']::placeholder {
  color: #B7BBC2;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 input {
  text-align: right;
  width: 132px;
}

<div
  class="c0 c1"
  data-testid="field-container"
>
  <input
    aria-disabled="false"
    aria-invalid="false"
    aria-required="false"
    class="c2"
    data-testid="input"
    id="uuid1"
    inputmode="numeric"
    placeholder="$"
    type="text"
    value="100,00 $"
  />
</div>
`;
